--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1.component.html
@@ -105,9 +105,9 @@
     <div class="ui attached segment" >
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          {{form.entrepreneur}}
-          <br>รายงานการตรวจปฏิบัติการรับวัตถุดิบ
-          <br> เดือน {{form.dateFrom}} - {{form.dateTo}}
+          กระดาษทำการรับวัตถุดิบ<br>
+          {{form.entrepreneur}}<br>
+          เดือน {{form.dateFrom}} - {{form.dateTo}}
         </div>
       </div>
       <br>
