--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-2/cop06-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-2/cop06-2.component.html
@@ -1,290 +1,171 @@
-
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">รายงานการตรวจปฏิบัติการสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</h2>
+    <h2 class="ui header">สร้างกระดาษทำการหาความสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</h2>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>Criteria</span>
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
+      <span>ระบุรายละเอียดกระดาษทำการ</span>
     </div>
 
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
-            <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
+    <div class="ui attached segment {{loading ? 'loading' : ''}}">
+      <form class="ui form" id="form">
+        <!-- row 1 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
           </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-            <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
+          <div class="four wide field" [ngClass]="{'error': error}">
+            <select name="exciseId " id="exciseId" class="ui dropdown ai search full-width office" (change)="changeExciseId($event)"
+              [(ngModel)]="form.exciseId">
+              <option value="">กรุณาเลือก</option>
+              <option *ngFor="let item of exciseIdList" value="{{item.value}}">{{item.label}}</option>
+
+            </select>
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">เลขประจำตัวผู้เสียภาษี</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.userNumber" name="userNumber">
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ผู้ประกอบการ </label>
-            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
+        <!-- row 2 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ผู้ประกอบการ</label>
           </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="256000000001">
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.entrepreneur" name="entrepreneur">
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">เลขที่วิเคราะห์</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.anlysisNumber" name="anlysisNumber">
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="eight wide field required">
-            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-            <div class="eight wide field">
-              <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="11/2560" readonly="">
-                <i class="add to calendar icon"></i>
+        <!-- row 3 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ประเภท</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.type" name="type">
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">พิกัด</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.coordinates" name="coordinates">
+          </div>
+        </div>
+
+        <!-- row 4 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">รอบระยะเวลาการตรวจสอบ</label>
+          </div>
+          <div class="four wide field ">
+            <div class="ui calendar full-width" id="dateF">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป"
+                  [attr.required]="true">
               </div>
             </div>
-            <div class="eight wide field">
-              <label>-</label>
-              <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="11/2560" readonly="">
-                <i class="add to calendar icon"></i>
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">ถึง</label>
+          </div>
+          <div class="four wide field ">
+            <div class="ui calendar full-width" id="dateT">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป"
+                  [attr.required]="true">
               </div>
             </div>
           </div>
         </div>
-
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ประเภท </label>
-            <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="สินค้า">
-          </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">พิกัด</label>
-            <input type="text" class="custom-readonly" placeholder="พิกัด" readonly="" value="รถยนต์">
-          </div>
-        </div>
-      </div>
+        <br><br>
+        <div class="ui stackable center aligned page grid">
+          <button class="ui mini primary button" type="button" (click)="search()"><i class="file outline icon"></i>
+            แสดงกระดาษทำการ</button>
+          <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
+        </div><br>
+      </form>
     </div>
-
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>อัพโหลด Template ข้อมูลปริมาณการเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</span>
-    </div>
-
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
-            <input type="file" />
-          </div>
-        </div>
+    <br>
+  <div id="Dtable">
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
+        <span>รายละเอียดข้อมูลกระดาษทำการ</span>
       </div>
-
-      <div class="ui center aligned grid">
-        <div class="four wide column">
-          <button class="ui mini primary button" (click)="uploadData()">
-            <i class="upload icon"></i>
-            อัพโหลด
-          </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="trash outline icon"></i>
-            ลบไฟล์
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="ui segment" *ngIf="showData">
+    <div class="ui attached segment" >
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          บ. ฮอนด้า มอเตอร์ ประเทศไทย
-          <br> กระดาษทำการสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป
-          <br> เดือน พ.ย. 2559 - ส.ค. 2559
+          กระดาษทำการหาความสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป<br>
+          {{form.entrepreneur}}<br>
+          เดือน {{form.dateFrom}} - {{form.dateTo}}
         </div>
       </div>
       <br>
-      <div style="overflow-x: scroll;">
-        <table class="ui small celled table striped selectable" style="width: 140%;">
-          <thead>
-            <tr style="text-align: center;">
-              <th rowspan="2">ว/ด/ป.</th>
-              <th rowspan="2">เลขที่ใบสำคัญ</th>
-              <th rowspan="2">รายการ</th>
-              <th rowspan="2">จำนวนรับตามบัญชี ภส 07-02</th>
-              <th rowspan="2">สูตรการจากผลิต</th>
-              <th rowspan="2">เบิกตามสูตร</th>
-              <th rowspan="2">เบิกใช้จริง</th>
-              <th rowspan="2">ผลต่างวัตถุดิบ</th>
-              <th colspan="2">ผลิตได้ตามสูตร</th>
-              <th rowspan="2">ผลต่างสินค้าสำเร็จรูป</th>
-              <th colspan="2">หักสูญเสีย</th>
-              <th rowspan="2">คงเหลือ</th>
-            </tr>
-            <tr style="text-align: center;">
-              <th style="border-left: 1px solid rgba(34,36,38,.1);">แยกตามวัตถุดิบ</th>
-              <th>จำนวนสินค้าสำเร็จรูป</th>
-              <th>เปอร์เซ็นต์</th>
-              <th>จำนวน</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1/4/2560</td>
-              <td></td>
-              <td>เครื่องยนต์</td>
-              <td>90</td>
-              <td>1</td>
-              <td>90</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>100</td>
-              <td>90</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">&nbsp;</span>
-              </td>
-            </tr>
-            <tr>
-              <td>1/4/2560</td>
-              <td></td>
-              <td>ล้อ</td>
-              <td>90</td>
-              <td>4</td>
-              <td>360</td>
-              <td>360</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-              <td>90</td>
-              <td>90</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">&nbsp;</span>
-              </td>
-            </tr>
-            <tr>
-              <td>3/4/2560</td>
-              <td></td>
-              <td>เครื่องยนต์</td>
-              <td>90</td>
-              <td>1</td>
-              <td>90</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>100</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>10</td>
-              <td>10</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-            </tr>
-            <tr>
-              <td>3/4/2560</td>
-              <td></td>
-              <td>ล้อ</td>
-              <td>90</td>
-              <td>4</td>
-              <td>360</td>
-              <td>400</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">40</span>
-              </td>
-              <td>100</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>10</td>
-              <td>10</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-            </tr>
-            <tr>
-              <td>7/4/2560</td>
-              <td></td>
-              <td>เครื่องยนต์</td>
-              <td>60</td>
-              <td>1</td>
-              <td>60</td>
-              <td>66</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">6</span>
-              </td>
-              <td>66</td>
-              <td>66</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">6</span>
-              </td>
-              <td>10</td>
-              <td>4</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">2</span>
-              </td>
-            </tr>
-            <tr>
-              <td>7/4/2560</td>
-              <td></td>
-              <td>ล้อ</td>
-              <td>60</td>
-              <td>4</td>
-              <td>240</td>
-              <td>264</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">24</span>
-              </td>
-              <td>66</td>
-              <td>66</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">6</span>
-              </td>
-              <td>10</td>
-              <td>4</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">2</span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <br>
+      <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
+        <thead>
+          <tr>
+            <th style="text-align: center !important;" rowspan="2">ลำดับ</th>
+            <th style="text-align: center !important;" rowspan="2">รายการ</th>
+            <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
+            <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
+            <th style="text-align: center !important;" rowspan="2">ผลต่าง</th>
+          </tr>
+          <tr>
+            <th style="text-align: center !important;">จำนวนภาษี</th>
+            <th style="text-align: center !important;">ปริมาณ</th>
+            <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
 
+            <th style="text-align: center !important;">เลขที่ใบเสร็จ</th>
+            <th style="text-align: center !important;">จำนวนภาษี</th>
+            <th style="text-align: center !important;">ปริมาณ</th>
+            <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+          </tr>
+        </thead>
+
+      </table>
+      <br>
       <div class="ui center aligned grid">
         <div class="six wide column">
-          <button class="ui mini primary button">
+          <button class="ui mini primary button" (click)="save()" [disabled]="buttonDisabled">
             <i class="print icon"></i>
             บันทึกข้อมูล
           </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
         </div>
       </div>
     </div>
+  </div>
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
+      <span>อัปโหลดไฟล์ ข้อมูลกระดาษทำการ</span>
+    </div>
+    <div class="ui attached segment {{loading ? 'loading' : ''}}">
+      <form class="ui form" id="upload-form">
+        <!-- row 1 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ไฟล์อัปโหลด</label>
+          </div>
+          <div class="four wide field {{loading ? 'loading' : ''}}">
+            <input class="inputfile" type="file" name="fileName" id="fileName" (change)="onChangeUpload($event)" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+              title="อัปโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)">
+          </div>
+          <div class="three wide field ">
+            <button class="ui mini primary button" (click)="upload()"><i class="upload icon"></i>อัปโหลด</button>
+          </div>
+          <div class="four wide field ">
 
-    <br>
-    <div class="ui grid center aligned">
-      <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
-          <i class="arrow left icon"></i>
-          ย้อนกลับ
-        </button>
-      </div>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
