--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
@@ -42,7 +42,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" (click)="clickMenuIns()">รายงานการตรวจปฏิบัติการรรับ-จ่ายสินค้าสำเร็จรูป</a>
+                                                            <a href="javascript:;" (click)="clickMenuIns()">รายงานการตรวจปฏิบัติการรับ-จ่ายสินค้าสำเร็จรูป</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -52,7 +52,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" (click)="clickMenuTax()">รายงานการตรวจปฏิบัติการรตรวจสอบการลดหย่อนภาษี</a>
+                                                            <a href="javascript:;" (click)="clickMenuTax()">รายงานการตรวจปฏิบัติการตรวจสอบการลดหย่อนภาษี</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -62,7 +62,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04-8">รายงานการตรวจปฏิบัติการรตรวจสอบด้านราคา</a>
+                                                            <a href="javascript:;" routerLink="/cop06/14">รายงานการตรวจปฏิบัติการตรวจสอบด้านราคา</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -120,7 +120,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/cop06/9">รายงานการตรวจปฏิบัติการรตรวจสอบด้านมูลค่า</a>
+                                                            <a href="javascript:;" routerLink="/cop06/9">รายงานการตรวจปฏิบัติการตรวจสอบด้านมูลค่า</a>
                                                         </div>
                                                     </div>
                                                 </div>
